add images, fix bug and add favicon

--- a/app/style/parts/desctop.sass
+++ b/app/style/parts/desctop.sass
@@ -24,7 +24,23 @@ ul, ol
   li
     counter-increment: item
 
-.btn-mobile, .close-modal-btn
+.btn-mobile
+  display: none
+  visibility: hidden
+  opacity: 0
+
+.close-modal-btn
+  display: block
+  visibility: visible
+  opacity: 1
+  margin-bottom: 40px
+
+.puzzle-d
+  display: block
+  visibility: visible
+  opacity: 1
+
+.puzzle-m
   display: none
   visibility: hidden
   opacity: 0
