--- a/app/style/parts/media.sass
+++ b/app/style/parts/media.sass
@@ -7,6 +7,16 @@
       max-width: 235px
       margin: 40px auto 0
 
+    .puzzle-d
+      display: none
+      visibility: hidden
+      opacity: 0
+
+    .puzzle-m
+      display: block
+      visibility: visible
+      opacity: 1
+
     .close-modal-btn
       display: block
       visibility: visible
