--- a/app/style/parts/desctop.sass
+++ b/app/style/parts/desctop.sass
@@ -156,6 +156,9 @@ ul, ol
     .send-price
       color: #212121
 
+      &:hover
+        opacity: 0.8
+
       &:after
         background-color: #212121
 
@@ -582,6 +585,12 @@ ul, ol
           font-family: GothamPro
           margin-bottom: 12px
           font-size: 14px
+          display: inline-block
+
+        .link
+          display: inline-block
+          vertical-align: middle
+          margin-left: 25px
 
         .state
           text-transform: uppercase
