--- a/app/style/parts/media.sass
+++ b/app/style/parts/media.sass
@@ -47,7 +47,7 @@
       overflow-x: hidden
 
       .article
-        font-size: 32px
+        font-size: 26px
         line-height: 48px
 
       .text
@@ -164,6 +164,17 @@
 
           br
             display: none
+
+  .section9
+    .reviews-item__person
+      margin-bottom: 20px
+
+      .info
+        margin-top: 20px
+
+  .footer
+    .text
+      text-align: center !important
 
   .modal-container-window
     .modal-content
