--- a/app/style/parts/media.sass
+++ b/app/style/parts/media.sass
@@ -172,6 +172,11 @@
       .info
         margin-top: 20px
 
+    .video
+      iframe
+        width: 100% !important
+        height: 191px !important
+
   .footer
     .text
       text-align: center !important
