--- a/app/style/parts/desctop.sass
+++ b/app/style/parts/desctop.sass
@@ -509,7 +509,7 @@ ul, ol
       line-height: 24px
 
 .section8
-  padding: 100px 0
+  padding: 100px 0 0 0
 
   .tabs-steps
     counter-reset: item
